# CAS

./: .gitignore  .gitmodules  CLIENT.md  CMakeLists.txt  CREDITS  Cargo.toml  LICENSE  README.md  cas  cas_api_gateway.py  cas_mcp.py  cas_server.py  etrace  etrace_install.sh  etrace_sudoers  index.html  libcas.py  libft_db.py  pyproject.toml  requirements.txt  setup.py  setup_etrace.sh
bas/: .bas_config  CMakeLists.txt  LICENSE  README.md  armcc.py  base64.c  clang.py  compiler.c  compiler_armcc.c  compiler_clang.c  compiler_gcc.c  error.hpp  exec_worker.py  filedeps.cpp  ftdb.h  ftdb_entry.h  ftdbmaps.cpp  gcc.py  generate.py  get_clang_comps.py  get_gcc_comps.py  ide.py  input_name.cpp  interval_tree.c  interval_tree.h  interval_tree_generic.h  klib.h  libflat.c  libflat.h  main.cpp  maps.c  maps.h  nfsdb.h  nfsdb_maps.cpp  parser.cpp  parser.h  parser.hpp  phash.h  phash.txt  postprocess.py  (+12 more)
bas/cati/: CMakeLists.txt  cati.c
bas/etrace_parser/: CMakeLists.txt  error.cpp  error.hpp  main.cpp  parser.cpp  parser.hpp  phash.h  tags.hpp
bas/gcc_input_name/: CMakeLists.txt
bas/nfsdb/: CMakeLists.txt  compiler.h  filedeps.cpp  ftdb_entry.h  maps.c  maps.h  nfsdb.h  nfsdb_maps.cpp  pyetrace.c  pyetrace.h
bas/worker/: CMakeLists.txt  worker.cpp
clang-proc/: CMakeLists.txt  DeclPrinter.cpp  DeclPrinter.h  JSON.md  LICENSE  MacroHandler.cpp  MacroHandler.h  MacroInfoExt.h  PPCallbacksTracker.cpp  PPCallbacksTracker.h  README.md  StmtPrinter.cpp  StmtPrinter.h  TypePrinter.cpp  TypePrinter.h  compat.h  create_json_db  dbjson.cpp  dbjson.hpp  dbtaint.json  deref.md  fops.cpp  fops.hpp  json.hpp  jsonast.py  lookup.cpp  main.cc  main.hpp  new_merge.py  notice.cpp  printers.h  printers_common.cpp  sha.cpp  sha.h  taint.cpp  typehash.cpp  utils.cc  utils.h  visit.cpp  visit.h  (+2 more)
clang-proc/10/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
clang-proc/11/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
clang-proc/12/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
clang-proc/13/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
clang-proc/14/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
clang-proc/15/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
clang-proc/16/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
clang-proc/17/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
clang-proc/18/: DeclPrinter.cpp  StmtPrinter.cpp  TypePrinter.cpp
client/: README.md  __init__.py  __main__.py  argmap.py  argparser.py  cmdline.py  exceptions.py  filtering.py  ide_generator.py  misc.py  mod_base.py  mod_compilation.py  mod_dbops.py  mod_dependencies.py  mod_executables.py  mod_funcs.py  mod_globals.py  mod_ide.py  mod_linked_modules.py  mod_misc.py  mod_modules.py  mod_opened_files.py  mod_sources.py  server.py  test_ftdb.py  test_main.py  test_server.py
client/ftdb_generator/: ftdb_generator.py
client/ide_generator/: generator_eclipse.py  project_generator.py
client/mcp/: bas.py  common.py
cmake/: git_hash.cmake  llvm_setup.cmake
examples/: build-avdkernel.sh  clean-avdkernel.sh  clone-avdkernel.sh  etrace_cpu_stats  etrace_show_info  extract-avdkernel-info-for-ftdb  extract-cas-info-for-ftdb  ftdb_show_info  generate-pdf-files-for-all-modules  generate-pdf-files-for-kernel  generate-pdf-files-for-ot
ftdb/: .clang-format  CMakeLists.txt  ftdb.c  ftdb.h  ftdb_entry.h  maps.c
ftdb/examples/: CMakeLists.txt  ftdb_sha256_test.c
ftdb/python/: CMakeLists.txt  fops.c  fops_entry.c  fops_iter.c  ftdb_entry.h  ftdbmaps.cpp  funccallinfo.c  funcdecls.c  funcdecls_entry.c  funcdecls_iter.c  funcderefinfo.c  funcifinfo.c  funclocalinfo.c  funcoffsetrefinfo.c  funcs.c  funcs_entry.c  funcs_iter.c  funcswitchinfo.c  generic_collection.c  globals.c  globals_entry.c  globals_iter.c  maps.c  maps.h  modules.c  modules_iter.c  pyftdb.c  pyftdb.h  recipe.h  sources.c  sources_iter.c  types.c  types_entry.c  types_iter.c  unresolvedfuncs.c  unresolvedfuncs_entry.c  unresolvedfuncs_iter.c  utils.c  utils.h
rust/: .gitignore  LICENSE  README.md
rust/examples/db-hash/: Cargo.toml
rust/examples/db-hash/src/: main.rs
rust/ftdb/: Cargo.toml  LICENSE.md  README.md
rust/ftdb-ext/: Cargo.toml
rust/ftdb-ext/specs/: vmlinux.json
rust/ftdb-ext/src/: lib.rs
rust/ftdb-ext/src/callgraph/: explicit_callgraph.rs  iterators.rs  mod.rs
rust/ftdb-ext/src/debugfs/: mod.rs
rust/ftdb-ext/src/fops/: mod.rs
rust/ftdb-ext/src/fops/specs/: config.rs  database.rs  mod.rs
rust/ftdb-sys/: Cargo.toml  build.rs
rust/ftdb-sys/bindings/: bindings.h
rust/ftdb-sys/bindings/includes/ftdb/: ftdb.h  maps.h
rust/ftdb-sys/bindings/includes/kflat/lib/: include_priv
rust/ftdb-sys/src/: lib.rs
rust/ftdb-sys/src/ftdb/: mod.rs  query.rs
rust/ftdb/scripts/: test.sh
rust/ftdb/src/: error.rs  lib.rs  macros.rs  utils.rs
rust/ftdb/src/db/: calls.rs  collection.rs  fops.rs  ftdb.rs  funcdecls.rs  globals.rs  identifiers.rs  mod.rs  modules.rs  sources.rs  sync.rs  types.rs  unresolved.rs  utils.rs  wrappers.rs
rust/ftdb/src/db/fops/: borrowed.rs  mod.rs  owned.rs
rust/ftdb/src/db/funcdecls/: borrowed.rs  mod.rs  owned.rs
rust/ftdb/src/db/funcs/: asms.rs  borrowed.rs  calls.rs  deref.rs  entry.rs  expr.rs  extensions.rs  function.rs  globalref.rs  ifs.rs  location.rs  mod.rs  owned.rs  refcall.rs  switches.rs  taint.rs
rust/ftdb/src/db/globals/: borrowed.rs  mod.rs  owned.rs
rust/ftdb/src/db/types/: borrowed.rs  mod.rs  owned.rs
rust/ftdb/src/db/unresolved/: borrowed.rs  mod.rs  owned.rs
rust/ftdb/src/sqlx/: identifiers.rs  mod.rs
rust/ftdb/tests/: mod.rs  utils.rs
rust/ftdb/tests/basics/: mod.rs
stylesheets/: stylesheet.css
tests/: ftdb_cache_test  ftdb_memory_test  ftdb_sha256_test.c  ftdb_sha256_test.py
tools/: nfsdb_compare.py
tracer/: LICENSE  Makefile  OUTPUT.md  README.md  bas_tracer.c  execve_trace.c  trie.h
typings/: libetrace.pyi  libftdb.pyi
vscode-extensions/: .gitignore  .pnpmfile.cjs  CHANGELOG.md  LICENSE  README.md  biome.jsonc  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
(+143 files in other folders)
